ocr-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ocr-app
  namespace: ocr-service
  labels:
    app: ocr-app
spec:
  selector:
    app: ocr-app
  ports:
    - protocol: TCP
      port: 4000       
      targetPort: 8000 
  type: ClusterIP
